# synx

./: .gitignore  CONTRIBUTING.md  CORE_FEATURES.md  Cargo.toml  ENTERPRISE_PLAN.md  INSTALL.md  PHILOSOPHY.md  PKGBUILD  PROGRESS_WEEK1.md  README.md  ROADMAP.md  WARP.md  _config.yml  liblinux.rlib  librun_examples.rlib  libvalid.rlib  logo.txt  synx.spec  test.py
.github/workflows/: ci.yml  release.yml
Formula/: synx.rb
assets/css/: style.scss
debian/: changelog  control  copyright  files  rules  synx.install
debian/.debhelper/synx/: dbgsym-build-ids
debian/.debhelper/synx/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/synx/dbgsym-root/usr/share/doc/: synx-dbgsym
debian/synx/DEBIAN/: control  md5sums
examples/config/: synx.toml
examples/docker/: invalid.Dockerfile
examples/html/: invalid.html
examples/javascript/: invalid.js  valid.js
examples/json/: invalid.json  valid.json
examples/python/: invalid.py  valid.py
examples/scenarios/frontend/js/: data-loader.js
examples/scenarios/frontend/styles/: main.css
examples/sentinel/: adaptive_scenarios.rs
examples/shell/: valid.sh
examples/tsx/: valid.tsx
examples/vue/: valid.vue
examples/yaml/: invalid.yaml  valid.yaml
examples/yaml/test_cases/anchors/: references.yaml
examples/yaml/test_cases/structure/: nested_structures.yaml
examples/yaml/test_cases/syntax/: scalar_types.yaml
packaging/: README.md
packaging/aur/: README.md
packaging/deb/: changelog  control  files
packaging/deb/apt/conf/: distributions
packaging/deb/db/: contents.cache.db
packaging/deb/dists/noble/: Release
packaging/deb/dists/noble/main/binary-amd64/: Packages
packaging/deb/dists/noble/main/source/: Release
packaging/debian/synx_0.2.1_amd64/DEBIAN/: control
packaging/rpm/: synx.spec
packaging/rpm/repo/: synx.repo
repo/: README.md  index.md  logo.txt
repo/deb/: REPOSITORY.md
repo/deb/conf/: distributions
repo/deb/db/: checksums.db  packages.db  references.db  release.caches.db
repo/deb/dists/noble/main/binary-amd64/: Packages  Release
repo/deb/pool/main/s/synx/: synx_0.2.1.dsc  synx_0.2.1.tar.xz  synx_0.2.1_amd64.deb  synx_0.2.1_source.build  synx_0.2.1_source.buildinfo  synx_0.2.1_source.changes
source/: .gitignore  COMMIT_MESSAGE.md  Cargo.toml  LICENSE  README.md  build_warnings.txt  install.sh  libvalid.rlib  logo-design.md
source/.github/workflows/: release.yml
source/backups/: memory.rs.bak  secure.rs.bak
source/docs/: TUI_ARCHITECTURE.md  TUI_GUIDE.md
source/examples/config/: synx-daemon.toml
source/examples/css/: valid.css
source/examples/docker/: valid.Dockerfile
source/examples/html/: valid.html
source/examples/jsx/: invalid.jsx  valid.jsx
source/examples/scenarios/frontend/: index.html
source/examples/scenarios/frontend/js/: main.js
source/examples/services/: com.synx.daemon.plist  synx-daemon.service
source/examples/shell/: invalid.sh
source/examples/vue/: invalid.vue
source/examples/yaml/: invalid.yaml  valid.yaml
source/examples/yaml/test_cases/multiline/: string_blocks.yaml
source/examples/yaml/test_cases/tags/: custom_types.yaml
source/packaging/brew/: synx.rb
source/packaging/macos/: build.sh
source/packaging/man/: synx.1
source/src/: banner.rs  lib.rs  main.rs  plugin.rs
source/src/analysis/: memory.rs  mod.rs  perf.rs  traits.rs
source/src/config/: mod.rs
source/src/daemon/: config.rs  mod.rs  service.rs
source/src/detectors/: mod.rs
source/src/intelligence/: integration.rs  learning.rs  metrics.rs  mod.rs  patterns.rs  quality.rs  sentinel.rs  suggestions.rs  trends.rs
source/src/lints/: explanations.rs  mod.rs
source/src/performance/: cache.rs  metrics.rs  mod.rs  parallel.rs
source/src/plugin/: examples.rs  integration.rs  loader.rs  registry.rs
source/src/tools/: audit.rs  detection.rs  installation.rs  linux.rs  mod.rs  paths.rs  policy.rs  requirements.rs  secure.rs  verify.rs
source/src/tui/: interactive.rs  issue_state.rs  mod.rs  syntax.rs  widgets.rs
source/src/validators/: display.rs  error_display.rs  mod.rs  scan.rs
source/test_errors/: detailed_error.py  syntax_error.js  syntax_error.py
source/test_performance/: test2.py  test3.js
source/tests/: config_features_test.rs  config_test.rs
source/tests/files/c/invalid/: broken.c
source/tests/files/c/valid/: hello.c
source/tests/files/csharp/invalid/: badclass.cs
source/tests/files/csharp/valid/: Person.cs
source/tests/files/go/invalid/hello/: main.go
source/tests/files/go/valid/hello/: main.go
source/tests/files/java/invalid/: InvalidJava.java
source/tests/files/java/valid/: HelloWorld.java
source/tests/files/javascript/invalid/: bad_code.js
source/tests/files/javascript/valid/: module.js
source/tests/files/python/invalid/: bad_code.py
source/tests/files/python/valid/: calculator.py
source/tests/files/typescript/invalid/: greeting.ts
source/tests/files/typescript/valid/: greeting.ts
src/: main.rs
src/analysis/: memory.rs
src/config/: mod.rs
src/detectors/: mod.rs
src/validators/: mod.rs
test_files/: invalid.json  invalid.py  invalid.rs  libvalid.rlib  valid.json  valid.py  valid.rs
tests/: run_examples.rs
