[package]
name = "synx"
version = "0.2.0"
edition = "2021"
description = "A CLI-first universal syntax validator and linter dispatcher"
authors = ["Alex"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/A5873/synx"
keywords = ["linter", "validator", "syntax", "cli", "development-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tree_magic_mini = "3.0"
anyhow = "1.0"
termcolor = "1.4"
toml = "0.8"
notify = "6.1"
dirs = "5.0"
serde_json = "1.0"
tempfile = "3.8"
