[package]
name = "synx"
version = "0.1.0"
edition = "2021"
authors = ["Alex <alexngugi.dev@gmail.com>"]
description = "A secure code validation and formatting system"
license = "MIT"

[dependencies]
# Error handling
anyhow = "1.0"

# Cryptographic operations
blake3 = "1.5"
getrandom = "0.2"

# Async runtime
tokio = { version = "1.32", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging and configuration
log = "0.4"
env_logger = "0.10"
once_cell = "1.18"
lazy_static = "1.4"

# File system and path handling
which = "5.0"
tempfile = "3.8"
dirs = "5.0"

# Pattern matching and text processing
regex = "1.9"

# Version handling
semver = "1.0"

# Security features
seccomp-rs = "0.2"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-security = "0.1"

[dev-dependencies]
tempfile = "3.8"
assert_fs = "1.0"
predicates = "3.0"

[features]
default = ["all-validators"]
all-validators = []
minimal = []

# Optional validators
python = []
javascript = []
typescript = []
rust = []
cpp = []
java = []
csharp = []
go = []

[profile.release]
# Enable link-time optimization
lto = true
# Enable debug information
debug = true
# Optimize for size
opt-level = "s"
# Enable stack unwinding
panic = "unwind"

[profile.dev]
# Enable debug assertions
debug-assertions = true
# Enable overflow checks
overflow-checks = true
# Enable debug information
debug = true

[workspace]
members = [
    "source",
]

[[bin]]
name = "synx"
path = "src/main.rs"

[lib]
name = "synx"
path = "src/lib.rs"
